--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="mainDetails">
 
         <div id="headshot" class="quickFade">
-            <img src="headshot.JPG" alt="Alan Smith"/>
+            <img src="headshot.JPG" alt="Le Quoc Duong"/>
         </div>
 
 
