--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="contactDetails" class="quickFade delayFour">
             <ul>
                 <li>e: <a href="mailto:lqduong.dev@gmail.com" target="_blank">lqduong.dev@gmail.com</a></li>
-                <li>in: <a href="https://www.linkedin.com/in/quốc-dương-lê-3aaa07160/" target="_blank">Quốc
+                <li>in: <a href="https://www.linkedin.com/in/lqduong-dev/" target="_blank">Quốc
                     Dương Lê</a></li>
                 <li>m: 0939808386</li>
             </ul>
