--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
         <div id="contactDetails" class="quickFade delayFour">
             <ul>
                 <li>e: <a href="mailto:lqduong.dev@gmail.com" target="_blank">lqduong.dev@gmail.com</a></li>
-                <li>in: <a href="https://www.linkedin.com/in/lqduong-dev/" target="_blank">Quốc
-                    Dương Lê</a></li>
-                <li>m: 0939808386</li>
+                <li>in: <a href="https://www.linkedin.com/in/lqduong-dev/" target="_blank">Le Quoc Duong</a></li>
+                <li>m: +84939808386</li>
             </ul>
         </div>
 
@@ -50,7 +49,7 @@
             <article>
 
                 <div class="sectionTitle">
-                    <h1>Personal Profile</h1>
+                    <h1>Personal<br/>Profile</h1>
                 </div>
 
 
@@ -70,13 +69,37 @@
         <section>
 
             <div class="sectionTitle">
-                <h1>Work Experience</h1>
+                <h1>Work<br/>Experience</h1>
             </div>
 
 
             <div class="sectionContent">
                 <article>
-                    <h2>NUS IAAS / 2359 Media</h2>
+                    <h2>Pokelist - <a
+                            href="https://apps.apple.com/us/app/pokelist/id1612782649"
+                            target="_blank">IOS</a></h2>
+                    <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">October 2021 - Present</p>
+
+                    <p style="margin-bottom: 0px;">Responsibilities:</p>
+                    <ul style="margin-left: 30px;">
+                        <li>Setup Code push</li>
+                        <li>Implement Pokemon API</a></li>
+                        <li>Create animation</a></li>
+                        <li>Add ADMob in to the app</a></li>
+                        <li>Publish the app to Apple store</a></li>
+                    </ul>
+
+                    <p style="margin-top: 10px;">Technologies: React Native, React Animated, ADMob, Code push</p>
+                </article>
+
+                <article>
+                    <h2>
+                        NUS IAAS / 2359 Media - <a
+                            href="https://apps.apple.com/us/app/nus-internship-as-a-service/id1601758609"
+                            target="_blank">IOS</a>
+                        <a href="https://play.google.com/store/apps/details?id=sg.edu.nus.iaas"
+                           target="_blank">Android</a>
+                    </h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">April 2021 - Present</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -88,24 +111,27 @@
                         <li>Implement NUS's project posting, joining, and closing process</a></li>
                     </ul>
 
-                    <p style="margin-top: 10px;">Technologies: React Native, React Animated, Universal link, Expo, Jest</p>
+                    <p style="margin-top: 10px;">Technologies: React Native, React Animated, Universal link, Expo,
+                        Jest</p>
                 </article>
 
                 <article>
-                    <h2>React Animation / Free time</h2>
+                    <h2>React Animation / Free time - <a
+                            href="https://github.com/lqduongdev/rn-animation"
+                            target="_blank">GitHub</a></h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">September 2020 - March 2021</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
                     <ul style="margin-left: 30px;">
                         <li>Sample code for some react native animation.</li>
-                        <li>Link github  <a href="https://github.com/lqduongdev/rn-animation" target="_blank">lqduongdev/rn-animation</a></li>
+                        </li>
                     </ul>
 
                     <p style="margin-top: 10px;">Technologies: React Native, React Animated, Reanimated 2</p>
                 </article>
 
                 <article>
-                    <h2>KTcity App / KTGROUP KTCITY</h2>
+                    <h2>KTcity App / KTCITY - Internal App</h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">March 2020 - March 2021</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -118,11 +144,12 @@
                         <li>E2E tests with Detox</li>
                     </ul>
 
-                    <p style="margin-top: 10px;">Technologies: React Native, Redux Persist, Redux Saga, App center, Universal link, Detox</p>
+                    <p style="margin-top: 10px;">Technologies: React Native, Redux Persist, Redux Saga, App center,
+                        Universal link, Detox</p>
                 </article>
 
                 <article>
-                    <h2>ReadSMS KTcity / KTGROUP KTCITY</h2>
+                    <h2>ReadSMS KTcity / KTCITY - Internal App</h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">March 2020 - June 2020</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -134,11 +161,14 @@
                         <li>Integrate telegram bot to record log, send action to application</li>
                     </ul>
 
-                    <p style="margin-top: 10px;">Technologies: React Native, Redux Persist, Redux Saga, Firebase Cloud Messaging, WatermelonDB, Telegram Bot</p>
+                    <p style="margin-top: 10px;">Technologies: React Native, Redux Persist, Redux Saga, Firebase Cloud
+                        Messaging, WatermelonDB, Telegram Bot</p>
                 </article>
 
                 <article>
-                    <h2>TECO / Freelance</h2>
+                    <h2>TECO / Freelance - <a
+                            href="https://apps.apple.com/us/app/teco/id1504048890"
+                            target="_blank">IOS</a></h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">May 2020 - October 2020</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -152,7 +182,11 @@
                 </article>
 
                 <article>
-                    <h2>MTM / Saigon Technology Solutions</h2>
+                    <h2>MTM / Saigon Technology Solutions - <a
+                            href="https://apps.apple.com/us/app/mtm-mobile/id1337553161"
+                            target="_blank">IOS</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.awcandroid"
+                           target="_blank">Android</a></h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">October 2019 - March 2020</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -169,7 +203,9 @@
                 </article>
 
                 <article>
-                    <h2>Kärchernet / Saigon Technology Solutions</h2>
+                    <h2>Kärchernet / Saigon Technology Solutions - <a
+                            href="https://play.google.com/store/apps/details?id=com.kaercher.kaerchernet"
+                            target="_blank">Android</a></h2>
                     <p class="subDetails">February 2019 - October 2019</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -192,7 +228,7 @@
 
 
                 <article>
-                    <h2>La Praire / Saigon Technology Solutions</h2>
+                    <h2>La Praire / Saigon Technology Solutions - Internal App</h2>
                     <p class="subDetails">June 2019</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -243,7 +279,7 @@
 
 
                 <article>
-                    <h2>Chat-hub / Saigon Technology Solutions</h2>
+                    <h2>Chat-hub / Saigon Technology Solutions - Internal App</h2>
                     <p class="subDetails">April 2018 - October 2018</p>
 
                     <p style="margin-bottom: 0px;">Responsibilities:</p>
@@ -336,7 +372,7 @@
             <div class="sectionContent">
                 <article>
                     <h2>Cần Thơ University</h2>
-                    <p class="subDetails">Software Engineering 2014-108</p>
+                    <p class="subDetails">Software Engineering 2014-2018</p>
                 </article>
             </div>
 
