--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="sectionContent">
                 <article>
-                    <h2>Pokelist - <a
+                    <h2>Pokelist / Free time - <a
                             href="https://apps.apple.com/us/app/pokelist/id1612782649"
                             target="_blank">IOS</a></h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">October 2021 - Present</p>
