update CV: style

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
             <div class="sectionContent">
                 <article>
-                    <h2>Cần Thơ University</h2>
+                    <h2>Can Tho University</h2>
                     <p class="subDetails">Software Engineering 2014-2018</p>
                 </article>
             </div>
