--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </article>
 
                 <article>
-                    <h2>TECO / Freelance - <a
+                    <h2>TECO / Saigon Technology Solutions - <a
                             href="https://apps.apple.com/us/app/teco/id1504048890"
                             target="_blank">IOS</a></h2>
                     <p style="font-size: 0.8em;font-style: italic;margin-bottom: 3px;">May 2020 - October 2020</p>
@@ -371,7 +371,7 @@
 
 
             <div class="sectionContent">
-                <article>
+                <article>ư
                     <h2>Can Tho University</h2>
                     <p class="subDetails">Software Engineering 2014-2018</p>
                 </article>
