--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 
             <div class="sectionContent">
-                <article>ư
+                <article>
                     <h2>Can Tho University</h2>
                     <p class="subDetails">Software Engineering 2014-2018</p>
                 </article>
